--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="main-container"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
