--- a/index.html
+++ b/index.html
@@ -5,7 +5,31 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="src/assets/images/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elian Germosen</title>
+
+  <!-- Meta Tags -->
+  <title>Elian Germosen · Web Developer</title>
+
+  <meta name="description"
+    content="Web Developer with +2 year of experience with the stack React and Angular for Frontend and C# .Net Core for Backend.">
+
+  <meta name="theme-color" content="#FD7014" />
+
+  <!-- Global Meta Tags -->
+  <meta property="og:url" content="https://eliangermosen.com">
+  <meta property="og:title" content="Elian Germosen · Web Developer">
+  <meta property="og:description"
+    content="Web Developer with +2 year of experience with the stack React and Angular for Frontend and C# .Net Core for Backend.">
+  <meta property="og:image" content="https://eliangermosen.com/opengraph.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="eliangermosen.com">
+  <meta property="twitter:url" content="https://eliangermosen.com">
+  <meta name="twitter:title" content="Elian Germosen · Web Developer">
+  <meta name="twitter:description"
+    content="Web Developer with +2 year of experience with the stack React and Angular for Frontend and C# .Net Core for Backend.">
+  <meta name="twitter:image" content="https://eliangermosen.com/opengraph.png">
+
   <!-- Typography Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
