feat: change meta image, title and description

--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Meta Tags -->
-  <title>Elian Germosen · Web Developer</title>
+  <title>Elian Germosen | Full-Stack Developer (React, Angular, .NET Core & SQL)</title>
 
   <meta name="description"
-    content="Web Developer with +2 year of experience with the stack React and Angular for Frontend and C# .Net Core for Backend.">
+    content="Full-Stack Developer with 4+ years of experience specializing in building high-impact solutions for the judicial and government sectors. Expert in React and Angular for crafting intuitive frontends, and .NET Core with SQL Server for robust backend architectures. Committed to clean code and digital transformation.">
 
   <meta name="theme-color" content="#FD7014" />
 
   <!-- Global Meta Tags -->
   <meta property="og:url" content="https://eliangermosen.com">
-  <meta property="og:title" content="Elian Germosen · Web Developer">
+  <meta property="og:title" content="Elian Germosen | Full-Stack Developer (React, Angular, .NET Core & SQL)">
   <meta property="og:description"
-    content="Web Developer with +2 year of experience with the stack React and Angular for Frontend and C# .Net Core for Backend.">
-  <meta property="og:image" content="https://eliangermosen.com/opengraph.png">
+    content="Full-Stack Developer with 4+ years of experience specializing in building high-impact solutions for the judicial and government sectors. Expert in React and Angular for crafting intuitive frontends, and .NET Core with SQL Server for robust backend architectures. Committed to clean code and digital transformation.">
+  <meta property="og:image" content="https://eliangermosen.com/opengraph_v2.0.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="eliangermosen.com">
   <meta property="twitter:url" content="https://eliangermosen.com">
-  <meta name="twitter:title" content="Elian Germosen · Web Developer">
+  <meta name="twitter:title" content="Elian Germosen | Full-Stack Developer (React, Angular, .NET Core & SQL)">
   <meta name="twitter:description"
-    content="Web Developer with +2 year of experience with the stack React and Angular for Frontend and C# .Net Core for Backend.">
-  <meta name="twitter:image" content="https://eliangermosen.com/opengraph.png">
+    content="Full-Stack Developer with 4+ years of experience specializing in building high-impact solutions for the judicial and government sectors. Expert in React and Angular for crafting intuitive frontends, and .NET Core with SQL Server for robust backend architectures. Committed to clean code and digital transformation.">
+  <meta name="twitter:image" content="https://eliangermosen.com/opengraph_v2.0.png">
 
   <!-- Typography Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
